# 3D-Renderer

./: CMakeLists.txt  main.cpp
resources/: fragment.shader
